@@ -9,6 +9,7 @@ Release History:
 
 Version 1.52 - Aug 23, 2010
     - fixed package (Makefile.PL) was missing
+    - added make target for webinject.pl
 
 Version 1.51 - Jul 30, 2010
     - added EPN support for check_webinject
